# ihs_webrtc_view

./: .gitignore  CMakeLists.txt  README.md  pubspec.yaml
.emb/: base.emb.yaml  raspberry-pi.emb.yaml
example/: .gitignore  README.md  pubspec.yaml
example/lib/: main.dart
example/native/: webrtc_session.c
example/peer/: h264_peer.c
lib/: ihs_webrtc_view.dart
lib/src/: binding.dart  track.dart  webrtc_view.dart
lib/src/ffi/: presenter_ffi.dart
native/: CMakeLists.txt
native/include/ihs_webrtc_view/: presenter.h
native/src/: sink.cc  tier_resolver.cc
native/src/tiers/: gpu_import.cc  plane.cc  subsurface.cc
native/test/: presenter_live.cc  presenter_test.cc
